fixed spacing

--- a/src/sections/About.scss
+++ b/src/sections/About.scss
@@ -1,7 +1,7 @@
 .about {
     display: grid;
     place-items: center;
-    height: 85vh;
+    height: 50rem;
     max-width: 80rem;
     margin: 1rem auto;
 }
