--- a/src/sections/Education.scss
+++ b/src/sections/Education.scss
@@ -1,7 +1,7 @@
 .education {
     display: grid;
     place-items: center;
-    height: 85vh;
+    height: 50rem;
     margin: 1rem auto;
     text-align: center;
 }
