--- a/src/sections/Projects.scss
+++ b/src/sections/Projects.scss
@@ -36,6 +36,10 @@
     margin-bottom: 0.5rem;
 }
 
+.projects-header {
+    color: var(--text-secondary)
+}
+
 .project-card {
     background-color: white;
     border-radius: 11px;
